# CLI

./: .codacy.yaml  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  main.py  model.py  pyproject.toml  refactor.sh  test.txt  use_gcp.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: bandit.yml  codacy.yml
src/ifw/: main.py  model.py
src/ifw/cli/: __init__.py  command_processor.py  controller.py  session_manager.py
src/ifw/cli/handlers/: __init__.py  ai_handler.py  base_handler.py  control_handler.py  shell_handler.py
src/ifw/config/: __init__.py  agent_config.py  loggin_config.py
src/ifw/shell/: bash_completion.py  completion.py  exec_shell.py  is_shell.py
src/ifw/tests/cli_module/: test_command_processor.py  test_controller.py  test_session_manager.py
src/ifw/tests/unit/cli/: test_command_processor.py  test_controller.py  test_session_manager.py
src/ifw/tests/unit/shell/: test_is_shell.py
src/ifw/tools/cloud/: use_azure.py  use_gcp.py  use_hetzner.py
src/ifw/tools/cloud/use_azure/: use_azure.py
src/ifw/tools/cloud/use_azure/tools/: best_practices.py
src/ifw/tools/cloud/use_gcp/: use_gcp.py  utils.py
src/ifw/tools/cloud/use_gcp/tools/: logging.py
src/ifw/tools/containers/: use_docker.py
src/ifw/tools/containers/use_docker/: use_docker.py
src/ifw/tools/memory/: force_faiss_config.py  use_memory.py  user_id_manager.py
src/ifw/tools/use_azure/: use_azure.py  utils.py
src/ifw/tools/use_docker/: use_docker.py
src/ifw/tools/use_gcp/: use_gcp.py
src/ifw/use_azure/: use_azure.py
src/ifw/use_azure/tools/: app_config.py  best_practices.py  cosmosdb.py  extensions.py  keyvault.py  kusto.py  monitor.py  postgres.py  redis.py  search.py  servicebus.py  storage.py  subscription.py
src/ifw/use_docker/: use_docker.py
src/ifw/use_gcp/: use_gcp.py
src/ifw/use_gcp/tools/: kubernetes.py  projects.py
src/ifw/utils/: banner.py  callback_handler.py  exceptions.py  exec_shell.py  is_shell.py  model.py  thinking_indicator.py
src/ifw/utils/shell/: bash_completion.py  completion.py  exec_shell.py
use_azure/tools/: cosmosdb.py  keyvault.py  kusto.py  redis.py  search.py  storage.py
use_docker/: use_docker.py
use_gcp/: use_gcp.py
use_gcp/tools/: billing.py  kubernetes.py  logging.py  projects.py  sql.py
